--- a/src/main/resources/templates/issues/creationForm.html
+++ b/src/main/resources/templates/issues/creationForm.html
@@ -10,10 +10,12 @@
     <div>
       <label for="summaryInput">概要</label>
       <input type="text" id="summaryInput" th:field="*{summary}">
+      <p th:if="${#fields.hasErrors('summary')}" th:errors="*{summary}">(erorr)</p>
     </div>
     <div>
       <label for="descriptionInput">説明</label>
       <textarea id="descriptionInput" row="10" th:field="*{description}"></textarea>
+      <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}">(erorr)</p>
     </div>
     <button type="submit">作成</button>
   </form>
