--- a/src/main/resources/templates/issues/list.html
+++ b/src/main/resources/templates/issues/list.html
@@ -19,8 +19,11 @@
         <tbody>
             <tr th:each="issue:${issueList}">
                 <td th:text="${issue.id}">(id)</td>
-                <td th:text="${issue.summary}">(summary)</td>
-                <td th:text="${issue.description}">(description)</td>
+                <td>
+                    <a href="./detail.html" th:href="@{/issues/{issueId}(issueId=${issue.id})}" th:text="${issue.summary}">
+                        (summary)
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
